[package]
name = "client_test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json","stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"